--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# Security
+
 quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
 quarkus.oidc.client-id=review.service.web
 quarkus.oidc.credentials.secret=bz51OwQkPtMHDgUp33lVt6qWtH3k70Cv
 
 # Tell Dev Services for Keycloak to import the realm file
 # This property is not effective when running the application in JVM or Native modes
+
+# Data source
+
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=root
+quarkus.datasource.password=123456
+quarkus.datasource.reactive.url=mysql://localhost:3306/review
