--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Security
 
-quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
-quarkus.oidc.client-id=review.service.web
-quarkus.oidc.credentials.secret=bz51OwQkPtMHDgUp33lVt6qWtH3k70Cv
+#quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
+#quarkus.oidc.client-id=review.service.web
+#quarkus.oidc.credentials.secret=bz51OwQkPtMHDgUp33lVt6qWtH3k70Cv
 
 # Tell Dev Services for Keycloak to import the realm file
 # This property is not effective when running the application in JVM or Native modes
