update docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Security
 
-quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
-quarkus.oidc.client-id=review.service.web
-quarkus.oidc.credentials.secret=bz51OwQkPtMHDgUp33lVt6qWtH3k70Cv
+quarkus.oidc.auth-server-url=https://localhost:8180/realms/review
+quarkus.tls.trust-all=true
 
-# Tell Dev Services for Keycloak to import the realm file
-# This property is not effective when running the application in JVM or Native modes
+quarkus.oidc.client-id=com.dylanops.review.be
+quarkus.oidc.credentials.secret=LGWUZwk7b5Ngvx1LQqRRAKRrsiiLKOwx
+
 
 # Data source
 
