--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.5
     container_name: quarkus-keycloak
-    command: ["start --optimized --hostname-url=http://sso.dylanops.com --proxy=edge"]
+    command: ["start --optimized --hostname-url=sso.dylanops.com --proxy=edge"]
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
@@ -33,6 +33,7 @@ services:
       - ./config/keycloak-server.key.pem:/tmp/keycloak-server.key.pem
     ports:
       - 80:80
+      - 443:443
     depends_on:
       - mysql
 
