--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 # Security
 
-quarkus.oidc.auth-server-url=https://localhost:8180/realms/review
+quarkus.oidc.auth-server-url=https://localhost:8080/realms/review
 quarkus.tls.trust-all=true
 
 quarkus.oidc.client-id=com.dylanops.review.be
-quarkus.oidc.credentials.secret=LGWUZwk7b5Ngvx1LQqRRAKRrsiiLKOwx
+quarkus.oidc.credentials.secret=UpMRngAdCT7wuBLdkVvzdw2NLolRzIgS
 
 
 # Data source
 
-quarkus.datasource.db-kind=mysql
+quarkus.datasource.db-kind=127.0.0.1
 quarkus.datasource.username=root
 quarkus.datasource.password=123456
 quarkus.datasource.reactive.url=mysql://localhost:3306/review
